added html part

--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <title>Word Scramble</title>
   </head>
   <body>
-    <h1>hello world</h1>
+    <header>
+        <h1>Guess the word game</h1>
+    </header>
+    <section>
+        <div class="gameArea">
+            <h3 class="msg"></h3>
+            <input type="text" class="hidden">
+            <button class="btn"></button>
+        </div>
+    </section>
     <script src="app.js"></script>
   </body>
 </html>
