--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Carter+One|Source+Sans+Pro&display=swap" rel="stylesheet">
     <title>Word Scramble</title>
   </head>
   <body>
@@ -14,7 +15,7 @@
         <div class="gameArea">
             <h3 class="msg"></h3>
             <input type="text" class="hidden">
-            <button class="btn"></button>
+            <button class="btn">Click here to start</button>
         </div>
     </section>
     <script src="app.js"></script>
